fixed ofershot padding on mobile

--- a/anime/opsMobile.css
+++ b/anime/opsMobile.css
@@ -1,7 +1,3 @@
 *{font-size:50px}
 img{width:380px}
-h1{padding:100px}
-iframe{
-    width:1120px;
-    height:630;
-}
+h1{padding:50px}
